k8s/11-service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: meetly
spec:
  selector:
    app: meetly
    component: postgresql
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  clusterIP: None
