k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetly-service
  labels:
    app: meetly
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: meetly
